# securitydept

./: .aiexclude  .cursorignore  .dockerignore  .env.example  .gitignore  .pnpmfile.cjs  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.runtime  LICENSE.md  README.md  README_zh.md  biome.jsonc  config.example.toml  custom-claims-check.mts  dev.kdl  docker-compose.traefik-override.yml  docker-compose.yml  justfile  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  securitydept-metadata.toml  tsconfig.base.json  tsconfig.json  tsconfig.scripts.json
.agents/skills/playwright-skill/: API_REFERENCE.md  SKILL.md  package.json  run.ts
.agents/skills/playwright-skill/lib/: helpers.ts
.github/actions/setup-mise-pnpm/: action.yml
.github/actions/setup-rust-cache/: action.yml
.github/workflows/: crates-publish.yml  docker-build.yml  docs.yml  npm-publish.yml  release.yml  tests.yml
apps/cli/: Cargo.toml  build.rs
apps/cli/src/: config.rs  error.rs  main.rs
apps/server/: Cargo.toml
apps/server/src/: config.rs  diagnosis.rs  error.rs  http_response.rs  main.rs  middleware.rs  state.rs
apps/server/src/routes/: auth.rs  entries.rs  forward_auth.rs  groups.rs  health.rs  mod.rs  policy.rs  propagation.rs  test_support.rs
apps/server/src/routes/auth/: basic.rs  mod.rs  session.rs  token_set.rs  token_set_backend_mode.rs  token_set_frontend_mode.rs
apps/webui/: index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.e2e.json  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
apps/webui/e2e/: basic-auth.spec.ts  frontend-oidc.spec.ts
apps/webui/e2e/fixtures/: _oidc-layout.html.j2  oidc-consent.html.j2  oidc-login.html.j2  oidc-message.html.j2  securitydept.e2e.config.toml.j2
apps/webui/e2e/support/: browser-capability-detection.ts  browser-execution-baseline-policy.ts  browser-harness-contract.ts  browser-harness-scenarios.ts  browser-harness.ts  constants.ts  frontend-oidc-fixtures.ts  host-platform.ts  start-oidc-provider.ts  start-securitydept-server.ts
apps/webui/src/: App.tsx  app.css  main.tsx
apps/webui/src/__tests__/: auth.test.ts  browserHarnessDetection.test.ts  tokenSet.test.ts
apps/webui/src/api/: auth.ts  client.ts  entries.ts  groups.ts  serverHealth.ts  tokenSet.ts
apps/webui/src/hooks/: useDashboardApi.ts  useTokenSetQueries.ts
apps/webui/src/lib/: authContext.ts  authObservationHierarchy.ts  basicAuth.ts  basicAuthContext.ts  browserHarnessReport.ts  dashboardPrincipal.ts  theme.ts  (+8 more)
docs/: 00-overview.md  000-OVERVIEW.md  000-OVERVIEW_zh.md  001-ARCHITECTURE.md  001-ARCHITECTURE_zh.md  002-FEATURES.md  002-FEATURES_zh.md  002-features.md  003-AUTH_CONTEXT_MODES.md  003-AUTH_CONTEXT_MODES_zh.md  004-BASIC_AUTH_ZONE.md  004-BASIC_AUTH_ZONE_zh.md  004-basic-auth-zone.md  100-ROADMAP.md  100-ROADMAP_zh.md  architecture.md  features.md  roadmap.md
docs/en/: 000-OVERVIEW.md  001-ARCHITECTURE.md  002-FEATURES.md  003-AUTH_CONTEXT_MODES.md  004-BASIC_AUTH_ZONE.md  005-ERROR_SYSTEM_DESIGN.md  006-REALIP.md  007-CLIENT_SDK_GUIDE.md  008-OIDC-MODE-FAMILY.md  008-RELEASE_AUTOMATION.md  020-AUTH_CONTEXT_AND_MODES.md  021-REFERENCE-APP-OUTPOSTS.md  100-ROADMAP.md  110-TS_SDK_MIGRATIONS.md
docs/zh/: 000-OVERVIEW.md  001-ARCHITECTURE.md  002-FEATURES.md  003-AUTH_CONTEXT_MODES.md  004-BASIC_AUTH_ZONE.md  005-ERROR_SYSTEM_DESIGN.md  006-REALIP.md  007-CLIENT_SDK_GUIDE.md  008-OIDC-MODE-FAMILY.md  008-RELEASE_AUTOMATION.md  020-AUTH_CONTEXT_AND_MODES.md  021-REFERENCE-APP-OUTPOSTS.md  100-ROADMAP.md  110-TS_SDK_MIGRATIONS.md
docsite/: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
docsite/.vitepress/: config.mts  theme.d.ts
docsite/.vitepress/theme/: style.css
docsite/public/: CNAME
docsite/scripts/: fix-docsite-symlink.ts  sync-docsite-symlink.ts
docsite/zh/: docs  index.md
justfiles/: build.just  dev.just  quality.just  release.just  setup.just  test.just  tools.just
scripts/: actions-cli.ts  release-cli.ts  test-cli.ts  update-core-feature-gates.ts
scripts/lib/: crates-release.ts  docker-release.ts  kube-test-resources.ts  kube-test-runner.ts  manifest-version.ts  metadata-sync.ts  metadata.ts  npm-release.ts  paths.ts  process.ts  release-policy.ts  release-ref.ts  release-registry.ts  version.ts  workflow.ts
sdks/ts/: package.json  public-surface-inventory.json  tsconfig.json  tsconfig.sdks.json  vitest.angular-setup.ts  vitest.config.ts
sdks/ts/examples/: access-token-substrate-minimal-entry.test.ts  adopter-clarity-contract.test.ts  angular-full-route-aggregation.test.ts  angular-guard-injection-context.test.ts  angular-integration-adapter.test.ts  angular-router-adapter.test.ts  async-client-readiness-contract.test.ts  auth-context-discoverability-parity.test.ts  auth-material-controller-contract.test.ts  backend-oidc-mediated-browser-scenario.test.ts  backend-oidc-mediated-subpath-contract.test.ts  backend-oidc-mode-browser-scenario.test.ts  backend-oidc-mode-minimal-entry.test.ts  backend-oidc-mode-subpath-contract.test.ts  backend-oidc-react-minimal-entry.test.ts  backend-oidc-web-minimal-entry.test.ts  backend-oidc-worker-like-host.test.ts  basic-auth-guard-scenario.test.ts  basic-auth-react-minimal-entry.test.ts  basic-auth-server-minimal-entry.test.ts  basic-auth-web-minimal-entry.test.ts  config-source-precedence.test.ts  cross-tab-sync-baseline.test.ts  frontend-oidc-minimal-entry.test.ts  login-redirect-convenience.test.ts  minimal-entry-points.test.ts  multi-client-lazy-init-contract.test.ts  multi-requirement-orchestration.test.ts  oidc-client-wrapper-contract.test.ts  popup-login-baseline.test.ts  public-contract-constants.test.ts  react-callback-async-readiness.test.ts  react-multi-client-registry-baseline.test.ts  react-planner-host-baseline.test.ts  react-query-integration-evidence.test.ts  route-orchestration-baseline.test.ts  scheduling-input-source-baseline.test.ts  session-context-react-minimal-entry.test.ts  session-context-scenario.test.ts  session-server-minimal-entry.test.ts  (+16 more)
(+51 files in other folders)
