cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "packages/core",
    "packages/oidc",
    "packages/utils",
    "packages/creds",
    "packages/creds-manage",
    "apps/server",
    "apps/cli",
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
axum = { version = "0.8", features = ["macros"] }
serde_json = "1"
snafu = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
openidconnect = "4"
oauth2 = "5"
regex = "1"
http = "1"
url = "2"
serde_with = "3"
base64 = "0.22"
figment = { version = "0.10", features = ["toml", "env"] }
web-route = "0.2"
typed-builder = "0.23.2"
argon2 = "0.6.0-rc.7"
sha2 = "0.10"
hex = "0.4"
rand = { version = "0.10", features = ["thread_rng"] }
chrono = "0.4"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
josekit = "0.10.3"
tower-http = { version = "0.6", features = ["cors", "fs"] }

[patch.crates-io]
openidconnect = { git = "https://github.com/ethaxon/openidconnect-rs.git", branch = "set_option" }

[profile.dev.package.swc_core]
rustflags = ["-Zhint-mostly-unused"]

[profile.release.package.swc_core]
rustflags = ["-Zhint-mostly-unused"]
