cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "packages/core",
    "packages/basic-auth-zone",
    "packages/session-context",
    "packages/token-set-context",
    "packages/oidc-client",
    "packages/oauth-provider",
    "packages/oauth-resource-server",
    "packages/realip",
    "packages/utils",
    "packages/creds",
    "packages/creds-manage",
    "apps/server",
    "apps/cli",
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
axum = { version = "0.8", features = ["macros"] }
serde_json = "1"
snafu = "0.9"
tokio = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
openidconnect = "4"
oauth2 = "5"
regex = "1"
http = "1"
url = "2"
serde_with = "3"
base64 = "0.22"
figment = { version = "0.10", features = ["toml", "env"] }
web-route = "0.2"
typed-builder = "0.23"
tower-sessions = "0.15"
argon2 = "0.6.0-rc.7"
sha2 = "0.10"
hex = "0.4"
rand = { version = "0.10", features = ["thread_rng"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
josekit = "0.10"
tower-http = { version = "0.6", features = ["cors", "fs"] }
maplit = "1"
arc-swap = "1"
atomic-write-file = "0.3"
notify = "8"
notify-debouncer-full = "0.7"
reqwest = { version = "0.13" }
ipnet = { version = "2", features = ["serde"] }
rfc7239 = "0.1"
humantime-serde = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
fs2 = "0.4"
serde-constant = "0.1"
testcontainers = "0.27"
anyhow = "1"
rustls = "0.23"
bollard = { version = "0.20", default-features = false }
moka = "0.12"

[patch.crates-io]
openidconnect = { git = "https://github.com/ethaxon/openidconnect-rs.git", branch = "set_option" }

[profile.dev.package.swc_core]
rustflags = ["-Zhint-mostly-unused"]

[profile.release.package.swc_core]
rustflags = ["-Zhint-mostly-unused"]
