[package]
name = "securitydept-cli"
version = "0.1.1"
edition = "2024"

[dependencies]
securitydept-core = { path = "../../packages/core", features = [
    "utils",
    "creds",
    "creds-manage",
    "creds-manage-migration",
] }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
figment = { workspace = true }
tabled = "0.20"

[build-dependencies]
winres = "0.1"
