[package]
name = "securitydept-cli"
version = "0.2.0-beta.3"
edition = "2024"
publish = false

[dependencies]
securitydept-core = { path = "../../packages/core", features = [
    "utils",
    "creds",
    "creds-manage",
    "creds-manage-migration",
] }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
figment = { workspace = true }
tabled = "0.20"

[build-dependencies]
winres = "0.1"
