[package]
name = "securitydept-server"
version = "0.2.0-alpha.3"
edition = "2024"

[features]
jwe = ["securitydept-core/creds-jwe"]

[dependencies]
securitydept-core = { path = "../../packages/core", features = [
    "utils",
    "auth-runtime-full",
    "basic-auth-context",
    "oidc-client-recommend",
    "token-set-context-recommend",
    "session-context",
    "creds",
    "creds-manage",
    "creds-manage-migration",
    "creds-rfc9068",
    "creds-jwt",
    "creds-oidc",
] }
axum = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-memory-store = "0.15"
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
openidconnect = { workspace = true }
figment = { workspace = true }
maplit = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
winres = "0.1"
